--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -2,6 +2,7 @@
   <div class='row'>
     <div class="mx-auto mt-5">
       <h2 class="title">ユーザー情報編集</h2>
+      <%= render 'layouts/errors', obj: @user %>
       <%= form_with model: @user, url: user_path(@user), local: true do |f| %>
         <div class="form-group">
           <%= f.label "お住まいの地域" %>
