--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,16 @@ body {
  		0 0.03em 0.03em #000,
  		0 0.03em 0.03em #FBE9E7;
  }
+ .search-form {
+  display: block;
+  margin: 0 auto;
+ }
+
+ input[type="number"] {
+  width: 15%;
+  height: auto;
+ }
+
  // kaminariの設定
  .pagination {
   justify-content: center;
@@ -183,6 +193,7 @@ body {
   right: 1rem;
   top: 1rem;
 }
+
 @media screen and (max-width: 768px) {
  .shop-image-all {
     height: 35vh;
