--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,4 +1,6 @@
-
+<div class="col-6 text-white mx-auto">
+  <%= render "devise/shared/error_messages", resource: resource %>
+</div>
 <div class='container'>
   <div class='row'>
     <div class="mx-auto mt-5">
