--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container">
-          <a class="navbar-brand" href="/"><%= image_tag("logo.png", size: '130x90') %></a>
+          <a class="navbar-brand logo" href="/"><%= image_tag("logo.png") %></a>
           <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
