--- a/app/views/user/images/index.html.erb
+++ b/app/views/user/images/index.html.erb
@@ -3,21 +3,17 @@
     <div class="col-12 mt-3">
       <p class="mt-2 h5"><%= link_to "戻る", shop_path(@shop) %></p>
       <p class="mt-2 h5">料理画像</p>
-
-        <div class="shop-image-all">
-          <% @shop_images.each do |image| %>
-          <%= attachment_image_tag(image, :food_image, class:"ml-4 mt-3 pb-3") %>
-          <% end %>
-        </div>
-
+      <div class="shop-image-all">
+        <% @shop_images.each do |image| %>
+          <%= attachment_image_tag(image, :food_image, class:"shop-image-self ml-4 mt-3 pb-3") %>
+        <% end %>
+      </div>
       <p class="mt-2 h5">店舗画像</p>
-
-        <div class="shop-image-all">
-          <% @shop_images.each do |image| %>
-          <%= attachment_image_tag(image, :shop_image, class:"ml-4 mt-2 pb-2") %>
-          <% end %>
-        </div>
-
+      <div class="shop-image-all">
+        <% @shop_images.each do |image| %>
+          <%= attachment_image_tag(image, :shop_image, class:"shop-image-self ml-4 mt-2 pb-2") %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
