レイアウト修正

--- a/app/views/user/images/index.html.erb
+++ b/app/views/user/images/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 mt-3">
+    <div class="mt-3">
       <p class="mt-2 h5"><%= link_to "戻る", shop_path(@shop) %></p>
       <p class="mt-2 h5">料理画像</p>
       <div class="shop-image-all">
