レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,6 +130,9 @@ input[type="number"] {
   color:black
 }
  // レビュー部分
+.review-icon {
+  width: 15%;
+}
 .review {
   color: black;
   background-color: white;
