--- a/app/views/user/reviews/index.html.erb
+++ b/app/views/user/reviews/index.html.erb
@@ -27,9 +27,9 @@
         <div class="review mt-3">
           <div class="card-header">
             <%= link_to user_path(review.user) do %>
-              <%= attachment_image_tag(review.user, :icon_image, width: "10%", fallback: "no-image.png", class:"rounded-circle border") %>
+              <%= attachment_image_tag(review.user, :icon_image, fallback: "no-image.png", class:"review-icon rounded-circle border") %>
             <% end %>
-            ユーザーネーム：<%= review.user.nickname %>
+            ユーザーネーム：<%= link_to review.user.nickname, user_path(review.user) %>
           </div>
             <div class="average-score">
               <div class="star-rating">
