--- a/app/views/user/users/_follow.html.erb
+++ b/app/views/user/users/_follow.html.erb
@@ -1,9 +1,9 @@
 <table class='table'>
   <% users.each do |user| %>
     <tr>
-      <td>
+      <td width="22%">
         <%= link_to user_path(user) do %>
-          <%= attachment_image_tag(user, :icon_image, size: '50x50', fallback: "no-image.png", class:"rounded-circle border") %>
+          <%= attachment_image_tag(user, :icon_image, fallback: "no-image.png", class:"rounded-circle border") %>
         <% end %>
       </td>
       <td><%= user.nickname %></td>
