--- a/app/views/user/users/followeds.html.erb
+++ b/app/views/user/users/followeds.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='row'>
-    <div class="col-7 mx-auto mt-5">
+    <div class="col-lg-8 col-md-10 col-sm-12 mx-auto mt-5">
       <h2 class="title"><%= @user.nickname %>さんのフォロワー</h2>
       <% if @user.followeds.count == 0 %>
         <p>ユーザーはいません</p>
