--- a/app/views/user/users/reviews.html.erb
+++ b/app/views/user/users/reviews.html.erb
@@ -7,7 +7,7 @@
           <div class="review mt-3">
             <div class="card-header">
               <%= link_to user_path(review.user) do %>
-                <%= attachment_image_tag(review.user, :icon_image, size: '40x40', fallback: "no-image.png", class:"rounded-circle border") %>
+                <%= attachment_image_tag(review.user, :icon_image, fallback: "no-image.png", class:"review-icon rounded-circle border") %>
               <% end %>
               <%= link_to review.shop.name, shop_path(review.shop) %>
             </div>
